Twig: `loopitem_start('loop')` `loopitem_end()` を追加 (PHP)

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -413,7 +413,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <div class="twig_template-loop">
 
-<div data-broccoli-instance-path="/fields.main@27" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
+<div data-broccoli-instance-path="/fields.main@27/fields.loop@0" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
 <p>えええ</p>
 
 <p><p>ううう</p>
@@ -421,7 +421,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div>
 
 
-<div data-broccoli-instance-path="/fields.main@27" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
+<div data-broccoli-instance-path="/fields.main@27/fields.loop@1" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
 <p>いいい</p>
 
 <p><p>あああ</p>
