<Twig><NodeJS> loopフィールドの内容が編集画面で表示されない不具合を修正

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -442,19 +442,19 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <div class="twig_template-loop">
 
 <div>
-<p>えええ</p>
-
-<p><p>ううう</p>
-</p>
+    <div><p>ううう</p>
 </div>
+    <div><p>えええ</p>
+</div>
+    </div>
 
 
 <div>
-<p>いいい</p>
-
-<p><p>あああ</p>
-</p>
+    <div><p>あああ</p>
 </div>
+    <div><p>いいい</p>
+</div>
+    </div>
 
 
 
