--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -414,19 +414,19 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <div class="twig_template-loop">
 
 <div data-broccoli-instance-path="/fields.main@27/fields.loop@0" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
-<p>えええ</p>
-
-<p><p>ううう</p>
-</p>
+    <div><p>ううう</p>
 </div>
+    <div><p>えええ</p>
+</div>
+    </div>
 
 
 <div data-broccoli-instance-path="/fields.main@27/fields.loop@1" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
-<p>いいい</p>
-
-<p><p>あああ</p>
-</p>
+    <div><p>あああ</p>
 </div>
+    <div><p>いいい</p>
+</div>
+    </div>
 
 <div data-broccoli-instance-path="/fields.main@27/fields.loop@2" data-broccoli-mod-id="testMod1:dev/twig" data-broccoli-sub-mod-name="loop" data-broccoli-is-appender="yes" style="overflow:hidden;padding:5px 15px;background-color:#dfe;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:9px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Double click here to add array element</div>
 
