(refactoring: add validator.js)

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -63,6 +63,24 @@ echo "<p>ここはPHPコードが出力した文字列です。</p>";
 
 <button onclick="alert(&quot;ここはJavaScriptでalertした文字列です。&quot;);
 ">test</button>
+<dl>
+    <dt>text</dt>
+        <dd></dd>
+    <dt>text required</dt>
+        <dd></dd>
+    <dt>html required</dt>
+        <dd></dd>
+    <dt>html_attr_text required</dt>
+        <dd></dd>
+    <dt>href required</dt>
+        <dd></dd>
+    <dt>markdown required</dt>
+        <dd>
+</dd>
+    <dt>multitext required</dt>
+        <dd>
+</dd>
+</dl>
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2>(1) モジュールIDの表現形式</h2>
