Twigテンプレートで作成したモジュールで、 loopフィールドサブモジュール内のmoduleフィールドに他のモジュールを入れられな不具合を修正。

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -449,6 +449,23 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 </div>
 
+<div class="twig_template-loop2">
+
+<div data-broccoli-instance-path="/fields.main@28/fields.loop2@0" data-broccoli-sub-mod-name="loop2" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
+    <div><p data-broccoli-instance-path="/fields.main@28/fields.loop2@0/fields.include_loop2_sub@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">テストです。</p>
+<div data-broccoli-instance-path="/fields.main@28/fields.loop2@0/fields.include_loop2_sub@1" data-broccoli-mod-id="testMod1:dev/twig" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div>
+</div>
+
+
+<div data-broccoli-instance-path="/fields.main@28/fields.loop2@1" data-broccoli-sub-mod-name="loop2" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
+    <div><p data-broccoli-instance-path="/fields.main@28/fields.loop2@1/fields.include_loop2_sub@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">テストです。
+その2。</p>
+<div data-broccoli-instance-path="/fields.main@28/fields.loop2@1/fields.include_loop2_sub@1" data-broccoli-mod-id="testMod1:dev/twig" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div>
+</div>
+
+<div data-broccoli-instance-path="/fields.main@28/fields.loop2@2" data-broccoli-mod-id="testMod1:dev/twig" data-broccoli-sub-mod-name="loop2" data-broccoli-is-appender="yes" style="overflow:hidden;padding:5px 15px;background-color:#dfe;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:9px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Double click here to add array element</div>
+</div>
+
 <div class="twig_template-is_canvas">これは編集画面にしか表示されない要素です。</div>
 
 </div>
