--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -462,6 +462,23 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 </div>
 
+<div class="twig_template-loop2">
+
+<div>
+    <div><p>テストです。</p>
+</div>
+</div>
+
+
+<div>
+    <div><p>テストです。
+その2。</p>
+</div>
+</div>
+
+
+</div>
+
 
 </div>
 <div class="dropdown" id="attr text id">
