--- a/tests/testdata/htdocs/test1/test1.html
+++ b/tests/testdata/htdocs/test1/test1.html
@@ -118,8 +118,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</ul>
 	</li>
 
-	<li>loop1: 
-	<ul>
+	<li>loop1: 	<ul>
 
 	</ul>
 	</li>
