--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -417,7 +417,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div>
 </div><div class="twig_template" data-broccoli-instance-path="/fields.main@28" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
 <h2><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span></h2>
-<span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span>
+<p><code>body</code> は入力されていません。</p>
 
 <div class="twig_template-include">
 <div data-broccoli-instance-path="/fields.main@28/fields.include_main@0" data-broccoli-mod-id="testMod1:dev/twig" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div>
