--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -75,11 +75,9 @@ echo "<p>ここはPHPコードが出力した文字列です。</p>";
     <dt>href required</dt>
         <dd></dd>
     <dt>markdown required</dt>
-        <dd>
-</dd>
+        <dd></dd>
     <dt>multitext required</dt>
-        <dd>
-</dd>
+        <dd></dd>
 </dl>
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
@@ -161,8 +159,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<li>loop3:
 			<div><p>どぉぉぉ</p>
 </div>
-			<div>
-</div>
+			<div></div>
 		</li>
 
 		</ul>
@@ -183,8 +180,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<li>loop3:
 			<div><p>テスト3ああああ</p>
 </div>
-			<div>
-</div>
+			<div></div>
 		</li>
 
 		<li>loop3:
@@ -427,10 +423,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 </div>
 <div class="twig_template">
-<h2>
-</h2>
-
-
+<h2></h2>
+<p><code>body</code> は入力されていません。</p>
 
 <div class="twig_template-include">
 
