フィールドを含まないモジュールの編集ウィンドウに、メッセージを追加した。
「このモジュールにはオプションが定義されていません。」

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -17,7 +17,9 @@
         <div class="contents" data-contents="main">
 <div class="parse-error-sample">
 </div>
-<p><img src="" /></p>
+<div>
+    <p>このモジュールには入力欄が定義されていません。</p>
+</div><p><img src="" /></p>
 <p>1: <img src="./index_files/resources/clip_m.png" alt="image 1" /></p>
 <p>2: <img src="./index_files/resources/clip_m.png" alt="image 2" /></p>
 <p>3: <img src="./index_files/resources/clip_m.png" alt="image 3" /></p>
