`color`, `date`, `datetime`, `time` のインターフェイスを実装。

--- a/tests/testdata/modules1/dev/texts/template.html
+++ b/tests/testdata/modules1/dev/texts/template.html
@@ -6,3 +6,7 @@
 <div>{&{"input":{"type":"markdown", "name":"markdown-1liner","rows":1}}&}</div>
 <div>{&{"input":{"type":"multitext", "name":"multitext"}}&}</div>
 <div>{&{"input":{"type":"multitext", "name":"multitext-1liner","rows":1}}&}</div>
+<div>{&{"input":{"type":"color", "name":"color"}}&}</div>
+<div>{&{"input":{"type":"date", "name":"date"}}&}</div>
+<div>{&{"input":{"type":"time", "name":"time"}}&}</div>
+<div>{&{"input":{"type":"datetime", "name":"datetime"}}&}</div>
