フィールド `date` を `datetime` に統合し廃止、 `time` フィールドも同様に廃止した。`datetime` フィールドに `step` オプション、 `format` オプションを追加

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,6 +1,8 @@
 <div class="parse-error-sample">
 </div>
-<p><img src="" /></p>
+<div>
+    <p>このモジュールには入力欄が定義されていません。</p>
+</div><p><img src="" /></p>
 <p>1: <img src="./index_files/resources/clip_m.png" alt="image 1" /></p>
 <p>2: <img src="./index_files/resources/clip_m.png" alt="image 2" /></p>
 <p>3: <img src="./index_files/resources/clip_m.png" alt="image 3" /></p>
@@ -537,6 +539,13 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </ul>
 </div>
 <div>- 1行マルチテキストです。</div>
+<div>#c09fb0</div>
+<div>2020-04-28 15:00:00</div>
+<div>2020-04-14 09:20:00</div>
+<div>2024-02-07 02:18:03</div>
+<div>2020年04月22日 15時00分00秒</div>
+<div>2016年02月01日 13時05分00秒</div>
+<div>2008年03月13日 06時31分54秒</div>
 <div>フィールド1</div>
 <div>フィールド2</div>
 <div>フィールド3</div>
