--- a/tests/testdata/modules1/dev/texts/template.html
+++ b/tests/testdata/modules1/dev/texts/template.html
@@ -7,6 +7,9 @@
 <div>{&{"input":{"type":"multitext", "name":"multitext"}}&}</div>
 <div>{&{"input":{"type":"multitext", "name":"multitext-1liner","rows":1}}&}</div>
 <div>{&{"input":{"type":"color", "name":"color"}}&}</div>
-<div>{&{"input":{"type":"date", "name":"date"}}&}</div>
-<div>{&{"input":{"type":"time", "name":"time"}}&}</div>
-<div>{&{"input":{"type":"datetime", "name":"datetime"}}&}</div>
+<div>{&{"input":{"type":"datetime", "name":"date", "step": "date"}}&}</div>
+<div>{&{"input":{"type":"datetime", "name":"datetime", "step": "min"}}&}</div>
+<div>{&{"input":{"type":"datetime", "name":"datetimesec", "step": "sec"}}&}</div>
+<div>{&{"input":{"type":"datetime", "name":"f_date", "step": "date", "format":"Y年m月d日 H時i分s秒"}}&}</div>
+<div>{&{"input":{"type":"datetime", "name":"f_datetime", "step": "min", "format":"Y年m月d日 H時i分s秒"}}&}</div>
+<div>{&{"input":{"type":"datetime", "name":"f_datetimesec", "step": "sec", "format":"Y年m月d日 H時i分s秒"}}&}</div>
