--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -562,7 +562,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <div>2024-02-07 11:18:03</div>
 <div>2020年04月23日 00時00分00秒</div>
 <div>2016年02月01日 22時05分00秒</div>
-<div>2008年03月13日 15時31分54秒</div>
+<div>2008年03月09日 12時07分01秒 = 08年3月9日 12時07分01秒 = pm PM 12時 12時</div>
 <div>フィールド1</div>
 <div>フィールド2</div>
 <div>フィールド3</div>
