--- a/tests/testdata/modules1/dev/texts/template.html
+++ b/tests/testdata/modules1/dev/texts/template.html
@@ -12,4 +12,4 @@
 <div>{&{"input":{"type":"datetime", "name":"datetimesec", "step": "sec"}}&}</div>
 <div>{&{"input":{"type":"datetime", "name":"f_date", "step": "date", "format":"Y年m月d日 H時i分s秒"}}&}</div>
 <div>{&{"input":{"type":"datetime", "name":"f_datetime", "step": "min", "format":"Y年m月d日 H時i分s秒"}}&}</div>
-<div>{&{"input":{"type":"datetime", "name":"f_datetimesec", "step": "sec", "format":"Y年m月d日 H時i分s秒"}}&}</div>
+<div>{&{"input":{"type":"datetime", "name":"f_datetimesec", "step": "sec", "format":"Y年m月d日 H時i分s秒 = y年n月j日 G時i分s秒 = a A h時 g時"}}&}</div>
