add new options: 'enableModuleAnchor', 'enableModuleDec'

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -1,6 +1,6 @@
 <div data-broccoli-instance-path="" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="_sys/root"><div class="parse-error-sample" data-broccoli-instance-path="/fields.main@0" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/parse_error_1">
 <span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてHTMLコードを編集してください)</span></div>
-<div data-broccoli-instance-path="/fields.main@1" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="入力欄がないモジュール">
+<div data-broccoli-instance-path="/fields.main@1" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="入力欄がないモジュール" data-dec="このコメントはテスト用です。" id="test_top_anchor">
     <p>このモジュールには入力欄が定義されていません。</p>
 </div><div data-broccoli-instance-path="/fields.main@2" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/image_double"><p><img src="" /></p>
 <p>1: <img src="data:image/png;base64,{broccoli-html-editor-resource-baser64:{db76f07be1e9aab245086676f9e3ff1e}}" alt="image 1" /></p>
