--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,6 +1,6 @@
 <div class="parse-error-sample">
 </div>
-<div>
+<div data-dec="このコメントはテスト用です。" id="test_top_anchor">
     <p>このモジュールには入力欄が定義されていません。</p>
 </div><p><img src="" /></p>
 <p>1: <img src="./index_files/resources/clip_m.png" alt="image 1" /></p>
