--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -17,7 +17,7 @@
         <div class="contents" data-contents="main">
 <div class="parse-error-sample">
 </div>
-<div>
+<div data-dec="このコメントはテスト用です。" id="test_top_anchor">
     <p>このモジュールには入力欄が定義されていません。</p>
 </div><p><img src="" /></p>
 <p>1: <img src="./index_files/resources/clip_m.png" alt="image 1" /></p>
