--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -6,12 +6,13 @@
 		<link rel="stylesheet" href="./index_files/css.css" />
 	</head>
 	<body>
-		<div class="instanceTreeView">...</div>
+		<div class="instanceTreeView"></div>
 		<div class="canvas" data-broccoli-preview="http://127.0.0.1:8088/editpage/index.html"></div>
-		<div class="palette">...</div>
-		<div class="instancePathView">...</div>
+		<div class="palette"></div>
+		<div class="instancePathView"></div>
 		<div class="test_funcs">
 			<ul>
+				<li><a href="javascript:window.main.reloadBroccoli();">Reload</a></li>
 				<li><a href="javascript:window.main.broccoli.historyBack(function(){alert('history Back done.');});">history Back</a></li>
 				<li><a href="javascript:window.main.broccoli.historyGo(function(){alert('history Go done.');});">history Go</a></li>
 				<li><a href="javascript:window.main.broccoli.copy(function(res){console.log(res);alert('copy done.');});">copy</a></li>
@@ -23,7 +24,7 @@
 		</div>
 
 		<!-- jQuery -->
-		<script src="./index_files/jquery-1.11.1.min.js" type="text/javascript"></script>
+		<script src="./index_files/jquery-3.5.1.min.js" type="text/javascript"></script>
 
 		<!-- Ace Editor (Optional) -->
 		<script src="./index_files/libs/ace-builds/src-noconflict/ace.js"></script>
@@ -40,8 +41,12 @@
 		<!-- main.js -->
 		<script src="./index_files/main.js" type="text/javascript"></script>
 		<script type="text/javascript">
-			main.init({
-				'serverType': 'biflora'
+			$(window).on('load', function(){
+				main.init({
+					'serverType': 'biflora'
+				},function(){
+					console.log('TestPage: Initialize Broccoli: done');
+				});
 			});
 		</script>
 	</body>
