--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,5 +1,17 @@
-<div class="parse-error-sample">
-</div>
+<div class="cols unit">
+	<div class="cols-col cols-1of2"><div class="cols-pad">
+<p>Left 1</p>
+<p>Left 2</p>
+<p>Left 3</p>
+<p>Left 4</p>
+	</div></div>
+	<div class="cols-col cols-1of2 cols-last"><div class="cols-pad">
+<p>Right 1</p>
+<p>Right 2</p>
+<p>Right 3</p>
+<p>Right 4</p>
+	</div></div>
+</div><!-- / .cols -->
 <div data-dec="このコメントはテスト用です。" id="test_top_anchor">
     <p>このモジュールには入力欄が定義されていません。</p>
 </div><p><img src="" /></p>
@@ -43,6 +55,16 @@ echo "<p>これは、PHPスクリプトによる出力です。</p>";
 </div>
 			<div><p>child.</p>
 </div>
+		</li>
+
+		<li>loop3-2			<div><p>loop element 2</p>
+</div>
+			<div></div>
+		</li>
+
+		<li>loop3-3			<div><p>loop element 3</p>
+</div>
+			<div></div>
 		</li>
 
 		</ul>
@@ -696,3 +718,5 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div>
 	</div></div>
 </div><!-- / .cols -->
+<div class="parse-error-sample">
+</div>
