--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -1,4 +1,4 @@
-<div data-broccoli-instance-path="" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="_sys/root"><div class="cols unit" data-broccoli-instance-path="/fields.main@0" data-broccoli-area-size-detection="shallow" data-broccoli-module-name=".cols (2カラム)">
+<div data-broccoli-instance-path="" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="ルート"><div class="cols unit" data-broccoli-instance-path="/fields.main@0" data-broccoli-area-size-detection="shallow" data-broccoli-module-name=".cols (2カラム)">
 	<div class="cols-col cols-1of2"><div class="cols-pad">
 <p data-broccoli-instance-path="/fields.main@0/fields.column1@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">Left 1</p>
 <p data-broccoli-instance-path="/fields.main@0/fields.column1@1" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">Left 2</p>
@@ -355,7 +355,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
     <p>custom1 field</p>
 <div style="background-color:#993; color:#fff; padding:1em;">あれ？</div>    <p>/custom1 field</p>
 </div>
- - {"modId":"testMod1:dev/custom1","fields":{"main":"あれ？"},"anchor":"","dec":""}<p class="finalized" style="color: #00f;">finalized</p></div><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-instance-path="/fields.main@23" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="_sys/unknown">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
+ - {"modId":"testMod1:dev/custom1","fields":{"main":"あれ？"},"anchor":"","dec":""}<p class="finalized" style="color: #00f;">finalized</p></div><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-instance-path="/fields.main@23" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="不明なモジュール">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
 <div data-broccoli-instance-path="/fields.main@24" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:parts/deeploop"><p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
 
