システムモジュール `_sys/image` を追加

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -108,7 +108,7 @@ echo "<p>ここはPHPコードが出力した文字列です。</p>";
 <h2>(1) モジュールIDの表現形式</h2>
 <pre><code>{$idx}:{$dir}/{$name}
 </code></pre>
-<img src="./index_files/resources/otosan.jpg" alt="" /><h2 data-dec="DEC入力テスト" id="minimum">最小構成のモジュールのサンプル</h2>
+<img src="./index_files/resources/flowers.jpg" alt="たくさんの花" /><h2 data-dec="DEC入力テスト" id="minimum">最小構成のモジュールのサンプル</h2>
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2>(2) モジュールテンプレートの定義場所</h2>
@@ -135,9 +135,9 @@ echo "<p>ここはPHPコードが出力した文字列です。</p>";
 <div class="unit thumb_list">
 	<ul>
 
-		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./index_files/resources/i-love-coffee.png" alt="pxt" /><span class="thumb_list-caption">pxt</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./index_files/resources/i-love-coffee.jpg" alt="コーヒーとサラダ" /><span class="thumb_list-caption">コーヒーとサラダ</span></a></div></li>
 
-		<li><div class="thumb_list-pad"><a href="http://pickles.pxt.jp/"><img src="./index_files/resources/i-love-md8.png" alt="pxt" /><span class="thumb_list-caption">こまった。</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="http://pickles.pxt.jp/"><img src="./index_files/resources/i-love-md8.jpg" alt="ティーバッグ" /><span class="thumb_list-caption">ティーバッグ</span></a></div></li>
 
 	</ul>
 </div><!-- /.thumb_list -->
@@ -327,7 +327,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <a href="http://www.pxt.jp/"><img src="./index_files/resources/1e970f28b68cf1c3318431e73040c492.svg" alt="SVG画像を読み込む練習です。" /></a><p>↑これはSVG</p>
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
-<a href="/plans/gui_spec/"><img src="./index_files/resources/father.png" alt="テスト" /></a><img src="./index_files/resources/everyone.png" alt="pxt logo" /><p>マークダウン。</p>
+<a href="/plans/gui_spec/"><img src="./index_files/resources/steps.jpg" alt="階段" /></a><img src="./index_files/resources/sky.jpg" alt="空" /><p>マークダウン。</p>
 	</div></div>
 </div><!-- / .cols -->
 <div class="cols unit">
