--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -578,7 +578,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </ul>
 </div>
 <div>- 1行マルチテキストです。</div>
-<div>#c09fb0</div>
+<div>#C09FB0</div>
 <div>2020-04-29 00:00:00</div>
 <div>2020-04-14 18:20:00</div>
 <div>2024-02-07 11:18:03</div>
