モジュールとのリンクが失われたインスタンスに、 `data-broccoli-error-message` 属性を付与するようになった。

--- a/tests/testdata/htdocs/test1/test1.html
+++ b/tests/testdata/htdocs/test1/test1.html
@@ -235,7 +235,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <p>復旧したっ。</p>
 	</div></div>
 </div><!-- / .cols -->
-<div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
+<div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-error-message="未知のモジュールテンプレートです。">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
 <h2>あれ。</h2>
 <p><code>app.contentsSourceData.js (138)</code> で出たエラーが出てこない。</p>
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
