--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -362,7 +362,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
     <p>custom1 field</p>
 <div style="background-color:#993; color:#fff; padding:1em;">あれ？</div>    <p>/custom1 field</p>
 </div>
- - {"modId":"testMod1:dev/custom1","fields":{"main":"あれ？"},"anchor":"","dec":""}<p class="finalized" style="color: #00f;">finalized</p><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
+ - {"modId":"testMod1:dev/custom1","fields":{"main":"あれ？"},"anchor":"","dec":""}<p class="finalized" style="color: #00f;">finalized</p><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-error-message="未知のモジュールテンプレートです。">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
 
@@ -561,7 +561,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </ul>
 </div>
 <div>- 1行マルチテキストです。</div>
-<div>#c09fb0</div>
+<div>#C09FB0</div>
 <div>2020-04-29 00:00:00</div>
 <div>2020-04-14 18:20:00</div>
 <div>2024-02-07 11:18:03</div>
