--- a/tests/testdata/htdocs/unknown_module/empty_data_json.html
+++ b/tests/testdata/htdocs/unknown_module/empty_data_json.html
@@ -1,1 +1,1 @@
-<div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
+<div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-error-message="未知のモジュールテンプレートです。">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
