一度 `fields` が空白になった階層に、新しいモジュールを入れようとすると反映されなくなる場合がある問題を修正。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -767,6 +767,10 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <!-- /.unit --></div>
 
         </div><!-- /secondly -->
+        <h2>thirdly</h2>
+        <div class="contents" data-contents="thirdly">
+
+        </div><!-- /thirdly -->
         <footer>
             <a href="../editpage/">top</a>, <a href="https://www.pxt.jp/" target="_blank">pxt</a>
             <form action="javascript:alert('form submit done.');">
