--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -15,6 +15,10 @@
         <h1>sample page</h1>
         <h2>main</h2>
         <div class="contents" data-contents="main">
+<div class="mod-multi-language">
+    <p>編集画面が多言語対応したモジュールのサンプルです。</p>
+    <div></div>
+</div>
 <div class="cols unit">
 	<div class="cols-col cols-1of2"><div class="cols-pad">
 <p>Left 1</p>
