<モジュールのマルチ言語化> フィールドのラベル名を多言語対応できるようになった。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -18,6 +18,15 @@
 <div class="mod-multi-language">
     <p>編集画面が多言語対応したモジュールのサンプルです。</p>
     <div></div>
+
+<div>
+    <div></div>
+    <div></div>
+</div>
+
+
+
+    <div></div>
 </div>
 <div class="cols unit">
 	<div class="cols-col cols-1of2"><div class="cols-pad">
