--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -1,6 +1,15 @@
 <div data-broccoli-instance-path="" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="ルート"><div class="mod-multi-language" data-broccoli-instance-path="/fields.main@0" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="MultiLanguage(en)">
     <p>編集画面が多言語対応したモジュールのサンプルです。</p>
     <div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span></div>
+
+<div data-broccoli-instance-path="/fields.main@0/fields.loop1@0" data-broccoli-sub-mod-name="loop1" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="loop1">
+    <div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span></div>
+    <div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;" data-broccoli-instance-path="/fields.main@0/fields.loop1@0/fields.module2@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">(ダブルクリックしてテキストを編集してください)</span><div data-broccoli-instance-path="/fields.main@0/fields.loop1@0/fields.module2@1" data-broccoli-mod-id="testMod1:dev/multilang" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div>
+</div>
+
+<div data-broccoli-instance-path="/fields.main@0/fields.loop1@1" data-broccoli-mod-id="testMod1:dev/multilang" data-broccoli-sub-mod-name="loop1" data-broccoli-is-appender="yes" style="overflow:hidden;padding:5px 15px;background-color:#dfe;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:9px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Double click here to add array element</div>
+
+    <div><div data-broccoli-instance-path="/fields.main@0/fields.module1@0" data-broccoli-mod-id="testMod1:dev/multilang" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div>
 </div>
 <div class="cols unit" data-broccoli-instance-path="/fields.main@1" data-broccoli-area-size-detection="shallow" data-broccoli-module-name=".cols (2カラム)">
 	<div class="cols-col cols-1of2"><div class="cols-pad">
