--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -21,7 +21,11 @@
 
 <div>
     <div></div>
-    <div></div>
+    <div>1</div>
+    <div><div>default1</div>
+<div>select1</div>
+<div>radio1</div>
+</div>
 </div>
 
 
