<モジュールのマルチ言語化> selectフィールドのoptionsで、 多言語対応機能を参照できるようになった。; サブモジュールで多言語対応機能が使えない不具合を修正;

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -4,7 +4,11 @@
 
 <div>
     <div></div>
-    <div></div>
+    <div>1</div>
+    <div><div>default1</div>
+<div>select1</div>
+<div>radio1</div>
+</div>
 </div>
 
 
