(あとから追加されたmodule, loopフィールドの不具合修正のためのテストコンテンツを追加)

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -754,6 +754,9 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div><!-- / .cols -->
 <div class="parse-error-sample">
 </div>
+<div class="errors-newloop">
+    <p>あとから追加されたフィールドのテスト</p>
+</div>
 
         </div><!-- /main -->
         <h2>secondly</h2>
