--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -737,4 +737,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div><!-- / .cols -->
 <div class="parse-error-sample" data-broccoli-instance-path="/fields.main@43" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/parse_error_1">
 <span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてHTMLコードを編集してください)</span></div>
-<div data-broccoli-instance-path="/fields.main@44" data-broccoli-mod-id="_sys/root" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div>
+<div class="errors-newloop" data-broccoli-instance-path="/fields.main@44" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="あとから追加されたフィールド">
+    <p>あとから追加されたフィールドのテスト</p>
+</div>
+<div data-broccoli-instance-path="/fields.main@45" data-broccoli-mod-id="_sys/root" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div>
