--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -755,7 +755,10 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <div class="parse-error-sample">
 </div>
 <div class="errors-newloop">
-    <p>あとから追加されたフィールドのテスト</p>
+	<p>あとから追加されたフィールドのテスト</p>
+	<div></div>
+	<div></div>
+
 </div>
 
         </div><!-- /main -->
