直接文字列でデータを格納していた `html`, `text`, `markdown`, `html_attr_text`, `href` の各フィールドが、`multitext` に合わせて `{"src": src}` の型で格納するように変更された。(読み込みについては旧来の文字列の形式との互換性が維持される)

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -125,6 +125,42 @@ echo "<p>ここはPHPコードが出力した文字列です。</p>";
     <dt>text</dt>
         <dd></dd>
     <dt>text required</dt>
+        <dd>test1@example.com</dd>
+    <dt>html required</dt>
+        <dd>test1@example.com</dd>
+    <dt>html_attr_text required</dt>
+        <dd>test1@example.com</dd>
+    <dt>href required</dt>
+        <dd>test1@example.com</dd>
+    <dt>markdown required</dt>
+        <dd><p>test1@example.com</p>
+</dd>
+    <dt>multitext required</dt>
+        <dd><p>customvalidation</p>
+</dd>
+</dl>
+<dl>
+    <dt>text</dt>
+        <dd>あああ</dd>
+    <dt>text required</dt>
+        <dd>あああ</dd>
+    <dt>html required</dt>
+        <dd>あああ</dd>
+    <dt>html_attr_text required</dt>
+        <dd>test1@example.com</dd>
+    <dt>href required</dt>
+        <dd>あああ</dd>
+    <dt>markdown required</dt>
+        <dd><p>あああ</p>
+</dd>
+    <dt>multitext required</dt>
+        <dd><p>customvalidation</p>
+</dd>
+</dl>
+<dl>
+    <dt>text</dt>
+        <dd></dd>
+    <dt>text required</dt>
         <dd></dd>
     <dt>html required</dt>
         <dd></dd>
