--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -52,6 +52,9 @@
 <p>1: <img src="./index_files/resources/clip_m.png" alt="image 1" /></p>
 <p>2: <img src="./index_files/resources/clip_m.png" alt="image 2" /></p>
 <p>3: <img src="./index_files/resources/clip_m.png" alt="image 3" /></p>
+<div>
+<a href="./index_files/resources/sample-data.xlsx" download="sample-data.xlsx">ファイルをダウンロードするサンプル</a>
+</div>
 <div class="loop-and-echo">
 <p>
     このモジュールは、 loopフィールドの外側にあるinputフィールドの値を、 loopフィールド内のechoフィールドで参照するテストです。<br />
