モジュールの README が、多言語版を定義できるようになった。

--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -44,7 +44,8 @@
 		<script type="text/javascript">
 			$(window).on('load', function(){
 				main.init({
-					'serverType': 'biflora'
+					'serverType': 'biflora',
+					'lang': 'ja',
 				},function(){
 					console.log('TestPage: Initialize Broccoli: done');
 				});
