--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -1,4 +1,4 @@
-<div data-broccoli-instance-path="" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="ルート"><div class="mod-multi-language" data-broccoli-instance-path="/fields.main@0" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="MultiLanguage(en)">
+<div data-broccoli-instance-path="" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="Root"><div class="mod-multi-language" data-broccoli-instance-path="/fields.main@0" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="MultiLanguage(en)">
     <p>編集画面が多言語対応したモジュールのサンプルです。</p>
     <div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(ダブルクリックしてテキストを編集してください)</span></div>
 
@@ -411,7 +411,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
     <p>custom1 field</p>
 <div style="background-color:#993; color:#fff; padding:1em;">あれ？</div>    <p>/custom1 field</p>
 </div>
- - {"modId":"testMod1:dev/custom1","fields":{"main":"あれ？"},"anchor":"","dec":""}<p class="finalized" style="color: #00f;">finalized</p></div><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-error-message="未知のモジュールテンプレートです。" data-broccoli-instance-path="/fields.main@27" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="不明なモジュール">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
+ - {"modId":"testMod1:dev/custom1","fields":{"main":"あれ？"},"anchor":"","dec":""}<p class="finalized" style="color: #00f;">finalized</p></div><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-error-message="未知のモジュールテンプレートです。" data-broccoli-instance-path="/fields.main@27" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="Unknown Module">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
 <div data-broccoli-instance-path="/fields.main@28" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:parts/deeploop"><p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
 
