フィールドの `description` に多言語表記を定義できるようになった。

--- a/tests/testdata/PlainHTMLElements/PlainHTML/MultiText/template.html
+++ b/tests/testdata/PlainHTMLElements/PlainHTML/MultiText/template.html
@@ -1,1 +1,5 @@
-{&{"input":{"type":"multitext","name":"main"}}&}
+{&{"input":{
+    "type":"multitext",
+    "name":"main",
+    "description":"フィールドに関する説明です。"}
+}&}
