--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -15,7 +15,11 @@
         <h1>sample page</h1>
         <h2>main</h2>
         <div class="contents" data-contents="main">
-<div class="mod-multi-language">
+<style>
+	html, body{
+		background-color: #f7f5f3 !important;
+	}
+</style><div class="mod-multi-language">
     <p>編集画面が多言語対応したモジュールのサンプルです。</p>
     <div></div>
 
