--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,4 +1,8 @@
-<div class="mod-multi-language">
+<style>
+	html, body{
+		background-color: #f7f5f3 !important;
+	}
+</style><div class="mod-multi-language">
     <p>編集画面が多言語対応したモジュールのサンプルです。</p>
     <div></div>
 
