--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -439,7 +439,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
     <p>custom1 field</p>
 <div style="background-color:#993; color:#fff; padding:1em;">あれ？</div>    <p>/custom1 field</p>
 </div>
- - {"modId":"testMod1:dev/custom1","fields":{"main":"あれ？"},"anchor":"","dec":""}<p class="finalized" style="color: #00f;">finalized</p><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-error-message="未知のモジュールテンプレートです。">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
+ - {"modId":"testMod1:dev/custom1","fields":{"main":"あれ？"},"anchor":"","dec":""}<p class="finalized" style="color: #00f;">finalized</p><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-error-message="Unknown Module Template.">[ERROR] Unknown Module Template.<!-- .error --></div>
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
 
