UIの英語化に関する修正。

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -146,7 +146,7 @@ echo "<p>これは、PHPスクリプトによる出力です。</p>";
     <dt>text required</dt>
         <dd><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(ダブルクリックしてテキストを編集してください)</span></dd>
     <dt>html required</dt>
-        <dd><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてHTMLコードを編集してください)</span></dd>
+        <dd><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(Double click to edit HTML code)</span></dd>
     <dt>html_attr_text required</dt>
         <dd>(ダブルクリックしてテキストを編集してください)</dd>
     <dt>href required</dt>
@@ -784,7 +784,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <div data-broccoli-instance-path="/fields.main@47/fields.column2@1" data-broccoli-mod-id="testMod2:units/cols2" data-broccoli-is-appender="yes" style="height:auto;max-height:calc(13.3 * 6px);overflow:hidden;padding:13px;background-color:#F5FAFF;border:3px solid transparent;border-radius:0px;font-family: &quot;Hiragino Kaku Gothic ProN&quot;, Meiryo, Verdana, sans-serif;font-size:13.3px;color:#3871E0;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Drop a module here</div>	</div></div>
 </div><!-- / .cols -->
 <div class="parse-error-sample" data-broccoli-instance-path="/fields.main@48" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/parse_error_1">
-<span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてHTMLコードを編集してください)</span></div>
+<span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(Double click to edit HTML code)</span></div>
 <div class="errors-newloop" data-broccoli-instance-path="/fields.main@49" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="あとから追加されたフィールド">
 	<p>あとから追加されたフィールドのテスト</p>
 	<div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(ダブルクリックしてテキストを編集してください)</span></div>
